# resume-normalization

./: Dockerfile  Jenkinsfile  README.md  config.py  docker-compose.yaml  documentdb_conf.py  main.py  nlptest.py  pyproject.toml  requirements.txt  resume_normalization_client.py  utils.py  values.yaml
logger/: README.md  __init__.py  linear_exceptions_formatting.py  logger.py  logger_config.py
logs/: my_app.log.2021-12-29  my_app.log.2021-12-30  my_app.log.2022-01-03  my_app.log.2022-03-31
