[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["apoorv omar <apoorv@simplifyvms.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.60.2"
starlette = "0.13.6"
joblib = "1.0.1"
nltk = "3.2.5"
numpy = "1.19.5"
python-jose = "3.2.0"
python-multipart = "0.0.5"
requests = "2.25.1"
sklearn = "0.0"
uvicorn = "0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
